Adding a database to the app and connecting it to the app using Environment Variables

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "dev": "nodemon app"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.3"
   }
 }
