--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app"
+    "dev": "nodemon app",
+    "populate": "node db/populatedb.js"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
